--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -1,4 +1,4 @@
-// SPDX-License-Identifier: MIT
+// SPDX-License-Identifier: PMPL-1.0-or-later
 // SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell
 = Contributing Guide
 :toc:
@@ -24,16 +24,16 @@ Your feedback shapes this project!
 |Type |One-Click Issue Creation
 
 |*Bug Report*
-|https://github.com/hyperpolymath/polyglot-db-mcp/issues/new?title=%5BBUG%5D%20&labels=bug&body=%23%23%20Environment%0A-%20OS%3A%20%0A-%20Deno%20version%3A%20%0A-%20Claude%20Code%20version%3A%20%0A%0A%23%23%20Database%20Adapter%0A%0A%23%23%20Steps%20to%20Reproduce%0A1.%20%0A2.%20%0A3.%20%0A%0A%23%23%20Expected%20Behavior%0A%0A%23%23%20Actual%20Behavior%0A[Create Bug Report]
+|https://github.com/hyperpolymath/poly-db-mcp/issues/new?title=%5BBUG%5D%20&labels=bug&body=%23%23%20Environment%0A-%20OS%3A%20%0A-%20Deno%20version%3A%20%0A-%20Claude%20Code%20version%3A%20%0A%0A%23%23%20Database%20Adapter%0A%0A%23%23%20Steps%20to%20Reproduce%0A1.%20%0A2.%20%0A3.%20%0A%0A%23%23%20Expected%20Behavior%0A%0A%23%23%20Actual%20Behavior%0A[Create Bug Report]
 
 |*Feature Request*
-|https://github.com/hyperpolymath/polyglot-db-mcp/issues/new?title=%5BFEATURE%5D%20&labels=enhancement&body=%23%23%20Feature%20Description%0A%0A%23%23%20Use%20Case%0A%0A%23%23%20Proposed%20Solution%0A[Request Feature]
+|https://github.com/hyperpolymath/poly-db-mcp/issues/new?title=%5BFEATURE%5D%20&labels=enhancement&body=%23%23%20Feature%20Description%0A%0A%23%23%20Use%20Case%0A%0A%23%23%20Proposed%20Solution%0A[Request Feature]
 
 |*New Database*
-|https://github.com/hyperpolymath/polyglot-db-mcp/issues/new?title=%5BDATABASE%5D%20&labels=new-database&body=%23%23%20Database%20Name%0A%0A%23%23%20Why%20This%20Database%3F%0A%0A%23%23%20Use%20Cases%0A%0A%23%23%20Links%0A-%20Website%3A%20%0A-%20Docs%3A%20[Request Database]
+|https://github.com/hyperpolymath/poly-db-mcp/issues/new?title=%5BDATABASE%5D%20&labels=new-database&body=%23%23%20Database%20Name%0A%0A%23%23%20Why%20This%20Database%3F%0A%0A%23%23%20Use%20Cases%0A%0A%23%23%20Links%0A-%20Website%3A%20%0A-%20Docs%3A%20[Request Database]
 
 |*General Feedback*
-|https://github.com/hyperpolymath/polyglot-db-mcp/issues/new?title=%5BFEEDBACK%5D%20&labels=feedback&body=%23%23%20Your%20Feedback%0A%0A%23%23%20Context%0A[Give Feedback]
+|https://github.com/hyperpolymath/poly-db-mcp/issues/new?title=%5BFEEDBACK%5D%20&labels=feedback&body=%23%23%20Your%20Feedback%0A%0A%23%23%20Context%0A[Give Feedback]
 |===
 
 == For AI Assistants
@@ -61,8 +61,8 @@ Thank you for your interest in contributing to polyglot-db-mcp!
 
 [source,bash]
 ----
-git clone https://github.com/hyperpolymath/polyglot-db-mcp.git
-cd polyglot-db-mcp
+git clone https://github.com/hyperpolymath/poly-db-mcp.git
+cd poly-db-mcp
 deno task start
 ----
 
@@ -127,7 +127,7 @@ All source files must include SPDX headers:
 
 [source,javascript]
 ----
-// SPDX-License-Identifier: MIT
+// SPDX-License-Identifier: PMPL-1.0-or-later
 // SPDX-FileCopyrightText: 2025 Your Name
 ----
 
